[gd_scene load_steps=13 format=3 uid="uid://dj2o51erpofrv"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_frbnv"]
[ext_resource type="Texture2D" uid="uid://bx376s646jio3" path="res://img/bg.png" id="2_27q0f"]
[ext_resource type="Texture2D" uid="uid://dq2836prnamfo" path="res://img/menus/MM Play game-05.png" id="3_yuct6"]
[ext_resource type="Texture2D" uid="uid://x146rbfy6ehy" path="res://img/menus/Pause How to play-05.png" id="4_l7lu6"]
[ext_resource type="Texture2D" uid="uid://c8tcox3gq38ds" path="res://img/menus/MM Quit-05.png" id="5_rk2in"]
[ext_resource type="Texture2D" uid="uid://dh8wc8tleb6dt" path="res://img/menus/MM Options.png" id="5_vs4eg"]
[ext_resource type="Texture2D" uid="uid://xbvrxxwh65er" path="res://img/clown.png" id="7_j14jv"]
[ext_resource type="PackedScene" uid="uid://h262r6rapa1q" path="res://options_menu.tscn" id="8_dpv20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yote7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b7w3w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uw3av"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20j1a"]
size = Vector2(478.712, 259.727)

[node name="MainMenu" type="Node"]
script = ExtResource("1_frbnv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_27q0f")
expand_mode = 3

[node name="Title" type="Label" parent="CanvasLayer"]
offset_left = 131.0
offset_top = 54.0
offset_right = 757.0
offset_bottom = 229.0
theme_override_font_sizes/font_size = 100
text = "SEACYCLED"

[node name="Play" type="Button" parent="CanvasLayer"]
offset_top = 268.0
offset_right = 507.0
offset_bottom = 386.0
scale = Vector2(0.8, 0.8)
theme_override_colors/icon_pressed_color = Color(0.576471, 0.694118, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_yote7")
keep_pressed_outside = true
icon = ExtResource("3_yuct6")
flat = true

[node name="HowTo" type="Button" parent="CanvasLayer"]
offset_left = 15.0
offset_top = 342.0
offset_right = 522.0
offset_bottom = 460.0
scale = Vector2(0.799961, 0.799961)
theme_override_colors/icon_pressed_color = Color(0.576471, 0.694118, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_b7w3w")
keep_pressed_outside = true
icon = ExtResource("4_l7lu6")
flat = true

[node name="Options" type="Button" parent="CanvasLayer"]
offset_top = 412.0
offset_right = 507.0
offset_bottom = 530.0
scale = Vector2(0.799961, 0.799961)
theme_override_colors/icon_pressed_color = Color(0.576471, 0.694118, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_b7w3w")
keep_pressed_outside = true
icon = ExtResource("5_vs4eg")
flat = true

[node name="Quit" type="Button" parent="CanvasLayer"]
offset_left = -1.0
offset_top = 484.0
offset_right = 506.0
offset_bottom = 602.0
scale = Vector2(0.8, 0.8)
theme_override_colors/icon_pressed_color = Color(0.576471, 0.694118, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_uw3av")
keep_pressed_outside = true
icon = ExtResource("5_rk2in")
flat = true

[node name="Fish" type="CharacterBody2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(834.849, 494.625)
scale = Vector2(0.19636, 0.19636)

[node name="FishSprite" type="Sprite2D" parent="CanvasLayer/Fish"]
unique_name_in_owner = true
texture = ExtResource("7_j14jv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Fish"]
position = Vector2(0.770508, -0.636719)
shape = SubResource("RectangleShape2D_20j1a")

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource("8_dpv20")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/HowTo" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="CanvasLayer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_quit_pressed"]
